Bug 901071 - D2D rendering always being disabled for Windows 8.1 on Intel hardware. r=bjacob